--- a/README.org
+++ b/README.org
@@ -10,6 +10,7 @@ To run you need the following depdencies:
 **** TODO Add login capability
 **** TODO Do searches automatically
 **** TODO Crawl searches
+**** TODO Add support for threaded comments
 ** [[http://forums.fanart-central.net/][Fanart Central Forums]] (fanart)
 *** Notes
     Looks like it's working just fine. 
@@ -17,7 +18,9 @@ To run you need the following depdencies:
 **** TODO Test it more
 ** [[http://ocremix.org/forums/][OverClocked ReMix Forums]] (overcloked)
 *** Notes
-    Parsing threads and normal forum posts seems to be ok. 
+    Parsing threads and normal forum posts seems to be ok. There are
+    to versions of the crawler. One tries to login and do searches and
+    parse them the other just scrapes the normal forums. 
 *** Next items
 **** TODO Fix bug where post for search doesn't give any results
 ** [[http://www.remix64.com/board/][Remix64]] (remix64)
